--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
-
     <!-- Permissions -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
@@ -10,36 +9,31 @@
         android:allowBackup="true"
         android:label="E-Waste"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-
+        <activity
+            android:name=".ApiHelper"
+            android:exported="false" />
         <!-- Login is the FIRST screen -->
         <activity
             android:name=".LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-
-        <!-- Signup Screen -->
+        </activity> <!-- Signup Screen -->
         <activity
             android:name=".SignupActivity"
-            android:exported="false" />
-
-        <!-- Main App Dashboard -->
+            android:exported="false" /> <!-- Main App Dashboard -->
         <activity
             android:name=".MainActivity"
-            android:exported="false" />
-
-        <!-- Other Dashboards -->
+            android:exported="false" /> <!-- Other Dashboards -->
         <activity
             android:name=".HouseholdDashboard"
             android:exported="false" />
-
         <activity
             android:name=".CorporateDashboard"
             android:exported="false" />
-
     </application>
 
 </manifest>
